fixed overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     width: 250px;
     height: 100%;
     margin-left: -250px;
-    overflow-y: auto;
+    overflow: hidden;
     /*background: #000;*/
     border-right: 1px solid #eee;
     -webkit-transition: all 0.5s ease;
@@ -111,11 +111,11 @@ body {
   display: inline;
 }
 
-ul {
+.block > ul {
   padding-left: 10px;
 }
 
-li, .text {
+.block > li, .text {
   margin-left: 5px;
 }
 
